improving commands and events se/deserialization